# spacebar

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
base/: settings.py  urls.py
spacebar/: apps.py
